[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
common-lib = {path = "../common-lib"}
tokio = { version = "1", features = ["full"] } # Async Runtime
clap = { version = "4.0", features = ["derive"] } # Command Line Parsing
rocket = { version = "0.5", features = ["json"] }  # Web Server
reqwest = { version = "0.11", features = ["json"] } # HTTP Requests
anyhow = { version = "1.0", default-features = false } # Improved Error Handling
serde = { version = "1.0", features = ["derive"] } # Serialization
